--- a/atv_biblia/index.html
+++ b/atv_biblia/index.html
@@ -7,9 +7,13 @@
 
     <title>Bíblia</title>
 
-    <style> body {
+    <style> 
+
+    body {
         text-align: center;
-    } </style>
+    } 
+    
+    </style>
 
 </head>
 <body style = "background-color: bisque;">
